--- a/index.html
+++ b/index.html
@@ -106,25 +106,29 @@
         <img src="assets/img/icon-twitter.png" alt="">
     </section>
 
-    <section class="sexsect">
-        <div class="sexsec">
-            <div class="sexcont">
-                <div>
-                    <h2><span>WHO</span> IS JOHN DOE?</h2>
+    <section class="SectionSix">
+        <div class="SixCont">
+            <div>
+                <h2><span>WHO</span> IS JOHN DOE?</h2>
+            </div>
+            <div class="textSix">
+                <div class="Sp1">
+                    <p>Bear claw marzipan bear claw applicake I love muffin. Lemon drops gummi bears pastry gummi bears
+                        sesame snaps I love unerdwear.com. Soufflé cotton candy dessert candy ice cream wafer gummies
+                        cheesecake brownie</p>
+                    <p>Muffin chupa chups jelly beans sweet pie applicake. Croissant chocolate cake I love pudding. Ice
+                        cream I love powder pudding apple pie marshmallow. Cupcake marzipan oat cake bonbon I love candy
+                        canes toffee.</p>
                 </div>
-                <div class="sextex">
-                    <div class="sexp1">
-                        <p>Bear claw marzipan bear claw applicake I love muffin. Lemon drops gummi bears pastry gummi bears sesame snaps I love unerdwear.com. Soufflé cotton candy dessert candy ice cream wafer gummies cheesecake brownie</p>
-                        <p>Muffin chupa chups jelly beans sweet pie applicake. Croissant chocolate cake I love pudding. Ice cream I love powder pudding apple pie marshmallow. Cupcake marzipan oat cake bonbon I love candy canes toffee.</p>
-                    </div>
-                    <div class="sexp2">
-                        <p>Pudding dessert jujubes tiramisu gingerbread croissant tiramisu applicake. Sesame snaps sugar plum cotton candy chocolate bonbon lemon drops candy canes cotton candy. Cake toffee pie bear claw pastry.</p>
-                        <div class="seximg">
-                            <img src="assets/img/icon-twitterF.png" alt="twitterF">
-                            <img src="assets/img/icon-google-plusF.png" alt="google-plusF">
-                            <img src="assets/img/icon-dribbbleF.png" alt="dribbbleF">
-                            <img src="assets/img/icon-coffeeF.png" alt="coffeeF">
-                        </div>
+                <div class="Sp2">
+                    <p>Pudding dessert jujubes tiramisu gingerbread croissant tiramisu applicake. Sesame snaps sugar
+                        plum cotton candy chocolate bonbon lemon drops candy canes cotton candy. Cake toffee pie bear
+                        claw pastry.</p>
+                    <div class="sixImg">
+                        <img src="assets/img/icon-twitterF.png" alt="twitterF">
+                        <img src="assets/img/icon-google-plusF.png" alt="google-plusF">
+                        <img src="assets/img/icon-dribbbleF.png" alt="dribbbleF">
+                        <img src="assets/img/icon-coffeeF.png" alt="coffeeF">
                     </div>
                 </div>
             </div>
